<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!-- Các mục menu mặc định của bạn -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gralery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_slideshow" />


        <item
            android:id="@+id/nav_benhan_option"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="Quản lý Bệnh án"
        />

        <item
            android:id="@+id/nav_camera2"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="Chức năng Camera/OCR" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />

    </group>
    

</menu>