<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.gallery.GalleryFragment">

    <!-- Tiêu đề màn hình -->
    <TextView
        android:id="@+id/textGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_account_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />


    <TextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/textGallery"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/tvNameLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvNameLabel"
        app:layout_constraintStart_toEndOf="@id/tvNameLabel"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:importantForAccessibility="yes"
        android:autofillHints="personGivenName" />



    <TextView
        android:id="@+id/tvUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_username"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/hint_username_uneditable"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/tvUsernameLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvUsernameLabel"
        app:layout_constraintStart_toEndOf="@id/tvUsernameLabel"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:importantForAccessibility="yes" />

    <TextView
        android:id="@+id/tvPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="phone"
        android:hint="@string/hint_phone"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/tvPhoneLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvPhoneLabel"
        app:layout_constraintStart_toEndOf="@id/tvPhoneLabel"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:importantForAccessibility="yes"
        android:autofillHints="phone" />


    <!-- Label và Input cho Địa chỉ -->
    <TextView
        android:id="@+id/tvAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_address"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/edtPhone"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/edtAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:inputType="textPostalAddress"
        android:hint="@string/hint_address"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@id/tvAddressLabel"
        app:layout_constraintBottom_toBottomOf="@id/tvAddressLabel"
        app:layout_constraintStart_toEndOf="@id/tvAddressLabel"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:importantForAccessibility="yes"
        android:autofillHints="postalAddress" />


    <!-- Nút Lưu Thay Đổi -->
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_changes"
        app:layout_constraintTop_toBottomOf="@id/edtAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_change_password"
        app:layout_constraintTop_toBottomOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>